--- a/css/tarifCard.css
+++ b/css/tarifCard.css
@@ -14,7 +14,7 @@ h1{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(400px, 1fr));
     grid-gap:30px;
-    margin: 10px;
+    margin: 2em 15em ;
 }
 .cardWrapper{
     position: relative;
@@ -122,6 +122,7 @@ h1{
     }
     .cardFront p {
         font-size: 25px;
+        color: rgb(148, 197, 15);
     }
     .cardFront .fa-arrow-right{
         position: absolute;
@@ -140,7 +141,7 @@ h1{
     height: 250px;
     }
     .cardBack p {
-        font-size: 25px;
+        font-size: 20px;
     }
     .cardWrapper:nth-child(even) .cardBack{
         background-color: rgb(5, 72, 72);
