--- a/css/accueil.css
+++ b/css/accueil.css
@@ -49,7 +49,7 @@ h1{
     position: absolute;
     width: 100%;
     min-height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     object-position: center;
     animation: scaleInfinite infinite 15s;
 }
@@ -191,7 +191,7 @@ h1{
 
 .modal-dialog .modal-body {
 
-    padding-top: 65px;
+    padding-top: 21px;
     background-color:  rgba(255, 255, 255, 0.842);
 }
 
