--- a/css/contact.css
+++ b/css/contact.css
@@ -1,18 +1,224 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;500;600;700;800&display=swap');
+
 .body{
     margin-top: 10%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    
 } 
-/* @media screen and (max-width: 321px){
-    .body{
-        margin-top: 0%;
-    } 
-} */
-@media screen and (max-width: 766px){
-    .body{
-        margin-top: 30%;
-    } 
+
+
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
 }
-@media screen and (min-width: 768px){
+
+.login-content{
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
+
+.img img{
+	width: 500px;
+}
+
+form{
+	width: 400px;
+}
+
+.login-content img{
+    height: 100px;
+}
+
+.login-content h2{
+	margin: 15px 0;
+	color: #47555e;
+	text-transform: uppercase;
+	font-size: 2rem;
+}
+
+.login-content .input-div
+{
+    position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    width: 100%;
+    background-color:#4084bf11;
+    border:none;
+    outline: none;
+    border-radius:10px;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    -ms-border-radius:10px;
+    -o-border-radius:10px;
+}
+
+.login-content .input-div.one{
+	margin-top: 0;
+}
+
+.i{
+	color: #d9d9d9;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.i i{
+	transition: .3s;
+}
+
+.input-div > div{
+    position: relative;
+	height: 45px;
+}
+
+.input-div > div > h5{
+	position: absolute;
+	left: 10px;
+	top: 25%;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+}
+
+.input-div > h5{
+	position: absolute;
+	left: 32px;
+	top: 5.5%;
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+	
+}
+
+.input-div > div > input {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 2.2rem 0.7rem;
+	font-size: 1.2rem;
+	color: #47555e;
+}
+.input-div textarea{
+    background: none;
+    margin: 25px 0;
+    border:none;
+    outline: none;
+    font-size: 1.2rem;
+    color: #47555e
+    
+}
+a{
+	display: block;
+	text-align: right;
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+.bouton{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #054848, #38d39f, #054848);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+.btn:hover{
+	background-position: right;
+}
+
+
+@media screen and (max-width: 768px) {
+    .body {
+        grid-template-columns: 1fr;
+    }
+
+    .img img {
+        width: 0%;
+    }
+
+    .login-content {
+        justify-content: center;
+    }
+
+    form {
+        width: 80%;
+    }
+
+    .login-content h2 {
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .body{
+        grid-gap: 2rem;
+        margin-top: 20%;
+    }
+
+    .img img {
+        width: 80%;
+        height: 80%;
+        margin: 5%;
+    }
+
+    form {
+        width: 100%;
+    }
+
+    .login-content h2 {
+        font-size: 1.7rem;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
     .body{
         margin-top: 15%;
-    } 
+        justify-content: center;
+    }
+    form {
+        width: 100%;
+    }
+    .login-content h2 {
+        font-size: 2.2rem;
+        
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .body{
+        margin-top: 15%;
+        justify-content: center;
+    }
+    form {
+        width: 100%;
+    }
+
+    .login-content h2 {
+        font-size: 2.5rem;
+       
+    }
 }
