--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@
 .navbar .nav-link {
 
     font-size: 18px;
-    margin-left: 30px;
+    margin: 14px;
     position: relative;
     color: rgba(255, 255, 255, 0.842)
 }
