--- a/css/tarifCard.css
+++ b/css/tarifCard.css
@@ -75,7 +75,7 @@ h1{
         bottom: 30px;
     }
     .cardWrapper:nth-child(even) .cardFront{
-        background-color: rgb(5, 72, 72);
+        background-color: #054848;
     }
     .cardBack {
     background:#47555e;
