--- a/css/tarifCard.css
+++ b/css/tarifCard.css
@@ -96,33 +96,69 @@ h1{
     } 
 
     /* Style for screens with a maximum width of 768px */
-@media only screen and (max-width: 768px) {
-    .card-container {
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      grid-gap: 20px;
-    }
+@media screen and (max-width: 768px) {
+  .container h1 {
+    font-size: 1.9rem;
+    margin-top: 45%;
   }
-  
+  .card-container {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+    margin: 1.6em ;
+  }
+  .cardWrapper .cardFront h2 {
+    font-size: 1.8rem;
+  }
+  .cardWrapper .cardFront p{
+    font-size: 1.2rem;
+  }
+  .cardWrapper .cardBack p{
+  font-size: 1rem;
+  }
+  }
   /* Style for screens with a minimum width of 768px */
-  @media only screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    .container h1 {
+      font-size: 2.3rem;
+      margin-top: 20%;
+    }
+
     .card-container {
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      grid-gap: 30px;
+      grid-gap: 50px;
+      grid-gap:20px;
+      margin: 0.5em 2em ;
     }
+
   }
-  
-  /* Style for screens with a minimum width of 992px */
-  @media only screen and (min-width: 992px) {
-    .card-container {
+  /* Style for screens with a minimum width of 1024px */
+  @media screen and (min-width: 1024px) and (max-width: 1440px) {
+    .container h1 {
+      font-size: 2.3rem;
+      margin-top: 15%;
+    
+    }
+    .card-container{
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      grid-gap: 40px;
-    }
+      grid-gap: 50px;
+      grid-gap:20px;
+      margin: 0.5em 2em ;
   }
-  
-  /* Style for screens with a minimum width of 1200px */
-  /* @media only screen and (min-width: 1200px) {
-    .card-container {
+  }
+  /* Style for screens with a minimum width of 1440px */
+  @media screen and (min-width: 1440px) {
+    .container h1 {
+      font-size: 3.5rem;
+      margin-top: 13%;
+    
+    }
+    .card-container{
       grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
       grid-gap: 50px;
-    }
-  } */
+      grid-gap:20px;
+      margin: 0.5em 2em ;
+  }
+  }
+  
+
