--- a/css/tarifCard.css
+++ b/css/tarifCard.css
@@ -1,7 +1,3 @@
-
-main{
-    margin-top: 8.5%;
-} 
 h1{
     color:#47555e;
     padding-bottom: 20px;
@@ -99,7 +95,7 @@ h1{
 @media screen and (max-width: 768px) {
   .container h1 {
     font-size: 1.9rem;
-    margin-top: 45%;
+    margin-top: 40%;
   }
   .card-container {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -141,9 +137,9 @@ h1{
     }
     .card-container{
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      grid-gap: 50px;
       grid-gap:20px;
       margin: 0.5em 2em ;
+      margin-bottom: 15%;
   }
   }
   /* Style for screens with a minimum width of 1440px */
@@ -158,6 +154,7 @@ h1{
       grid-gap: 50px;
       grid-gap:20px;
       margin: 0.5em 2em ;
+      margin-bottom: 2%;
   }
   }
   
