--- a/css/galerie.css
+++ b/css/galerie.css
@@ -1,40 +1,32 @@
-.gallery-title{
-    margin-top: px;
-    font-size: 36px;
-    color: #91bbd6;
-    text-align: center;
-    font-weight: 500;
-    margin-bottom: 0px;
-  }
+.btn-group, .btn-group-vertical {
+  display: -ms-inline-flexbox;
+  flex-wrap: wrap
+}
+  
   .links {
-    display: flex;
     justify-content: center
   }
   .links li {
+    margin-bottom: 0.5rem;
     list-style-type: none;
     margin-right: 8px;
   }
   .filterDiv.active {
     display: block;
+    justify-content: space-between
   }
   .filterDiv:not(.active){
     display: none;
   }
-  .bttn {
+  .btn {
 	background-color: white;
 	border: 2px solid black;
-	display: block;
-	width: 120%;
+	width: 100%;
 	height: 50px;
 	border-radius: 15px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #054848, #38d39f, #054848);
-	background-size: 200%;
-	font-size: 1.2rem;
 	color: #fff;
-	text-transform: uppercase;
-	margin: 3rem ;
 	cursor: pointer;
 	transition: .5s;
 	-webkit-border-radius: 15px;
@@ -42,25 +34,51 @@
 	-ms-border-radius: 15px;
 	-o-border-radius: 15px;
 }
-  .btn.active {
-    background-color: #47555e; 
-    border: 2px solid #47555e;
-    color: white;
+.btn-outline-dark.active {
+  background-image: linear-gradient(to right, #054848, #054848);
+  border: 1px solid #054848;
+  color: white;
+  }
+
+  .filterDiv{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 1rem;
   }
   .filterDiv img {
-    width: 300px;
-    height: 300px;
-  }
+    margin: 0.5rem;
+    padding:0.5rem ;
+    border-radius:1.5rem;
+    object-fit: cover;
+    -webkit-border-radius:1.5rem;
+    -moz-border-radius:1.5rem;
+    -ms-border-radius:1.5rem;
+    -o-border-radius:1.5rem;
+}
+  .filterDiv img:hover{
+    box-shadow: 0 1rem 1rem #054848;
+    border: 1.5rem var(white) solid;
+    
+}
+
   /* Style for screens with a minimum width of 768px */
   @media screen and (max-width: 768px) {
     .container-fluid {
       margin-top: 16%;
+    }
+    .filterDiv{
+      grid-template-columns: repeat(2,1fr);
+    
     }
   }
   /* Style for screens with a minimum width of 768px */
   @media screen and (min-width: 768px) and (max-width: 1024px) {
     .container-fluid {
       margin-top: 10%;
+    }
+    .filterDiv{
+      grid-template-columns: repeat(2,1fr);
+      margin: 1rem;
     }
   }
    /* Style for screens with a minimum width of 1024px */
