--- a/css/galerie.css
+++ b/css/galerie.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;500;600;700;800&display=swap');
+
+
 .btn-group, .btn-group-vertical {
   display: -ms-inline-flexbox;
   flex-wrap: wrap
