--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;500;600;700;800&display=swap');
 
+*{
+    font-family: 'Urbanist', sans-serif;
+}
 .navbar{
     background-color:#47555e;
     position: absolute;
