--- a/css/tarifCard.css
+++ b/css/tarifCard.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  font-family: 'Urbanist', sans-serif;
+}
 h1{
     color:#47555e;
     padding-bottom: 20px;
